leptos_macro/tests/view/44_wrong_type_and_missing_prop.stderr
error[E0277]: `bool` is not a valid type for prop `generic_fun` on component `Inner`
  --> tests/view/44_wrong_type_and_missing_prop.rs:13:32
   |
13 |             <Inner generic_fun=true>
   |                                ^^^^ the trait `Fn()` is not implemented for `bool`
   |
   = note: required: `Fn() -> bool`
note: required for `bool` to implement `__Check_generic_fun`
  --> tests/view/44_wrong_type_and_missing_prop.rs:20:1
   |
20 | #[component]
   | ^^^^^^^^^^^^
...
27 |     F: Fn() -> bool,
   |        ------------ unsatisfied trait bound introduced here
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `__pass_generic_fun` exists for type `bool`, but its trait bounds were not satisfied
  --> tests/view/44_wrong_type_and_missing_prop.rs:13:32
   |
13 |             <Inner generic_fun=true>
   |                                ^^^^
   |
note: the following trait bounds were not satisfied:
      `&bool: Fn<()>`
      `&mut bool: Fn<()>`
      `<&bool as FnOnce<()>>::Output = bool`
      `<&mut bool as FnOnce<()>>::Output = bool`
      `<bool as FnOnce<()>>::Output = bool`
      `bool: Fn<()>`
  --> tests/view/44_wrong_type_and_missing_prop.rs:27:8
   |
20 | #[component]
   | ------------
...
27 |     F: Fn() -> bool,
   |        ^^^^^^^^^^^^
   |        |       |
   |        |       unsatisfied trait bound introduced here
   |        unsatisfied trait bound introduced here
   = help: items from traits can only be used if the trait is implemented and in scope
note: `__Check_generic_fun` defines an item `__pass_generic_fun`, perhaps you need to implement it
  --> tests/view/44_wrong_type_and_missing_prop.rs:20:1
   |
20 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: missing required prop `concrete_i32` on component `Inner`
  --> tests/view/44_wrong_type_and_missing_prop.rs:13:14
   |
13 |             <Inner generic_fun=true>
   |              ^^^^^ missing prop `concrete_i32`
   |
   = help: the trait `__required_Inner_concrete_i32` is not implemented for `()`
   = note: all required props must be provided as attributes on the component
help: the trait `__required_Inner_concrete_i32` is implemented for `(__T,)`
  --> tests/view/44_wrong_type_and_missing_prop.rs:20:1
   |
20 | #[component]
   | ^^^^^^^^^^^^
note: required for `Inner::__PresenceBuilder<((), ((),), ((),))>` to implement `Inner::__CheckPresence`
  --> tests/view/44_wrong_type_and_missing_prop.rs:20:1
   |
20 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `__check_missing` exists for struct `Inner::__PresenceBuilder<((), ((),), ((),))>`, but its trait bounds were not satisfied
  --> tests/view/44_wrong_type_and_missing_prop.rs:13:14
   |
13 |             <Inner generic_fun=true>
   |              ^^^^^
...
20 | #[component]
   | ------------ method `__check_missing` not found for this struct
   |
note: trait bound `(): __required_Inner_concrete_i32` was not satisfied
  --> tests/view/44_wrong_type_and_missing_prop.rs:20:1
   |
20 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
